# python-kraddr-base

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: category-icons.md  map-domains.md  place-base-types.md
pykrtour/: __init__.py  _convert.py  addresses.py  categories.py  coordinates.py  domains.py  fuel.py  locations.py  poi.py
src/kraddr/: __init__.py
src/kraddr/base/: __init__.py  _enum.py  airports.py  categories.py  domains.py  locations.py
tests/: test_addresses.py  test_categories.py  test_coordinates.py  test_domains.py  test_locations.py  test_poi.py
