[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykrtour"
version = "0.1.5"
description = "Common POI categories, coordinates, and normalization helpers for TripMate Python libraries."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "digitie"}
]
keywords = ["tripmate", "poi", "korea", "tourism", "geospatial"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
geo = [
  "pyproj>=3.5",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["pykrtour*"]

[tool.setuptools.package-data]
pykrtour = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
